--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-link.ttl.seconds            =86400
-link.default.max-clicks     =10
-cleanup.interval.seconds    =60
+# ShortKey generation
+shortkey.length.initial         =6
+shortkey.length.max             =10
+shortkey.attempts.per.length    =10
+
+# Link settings
+link.ttl.seconds                =3600
+link.default.max-clicks         =3
+
+# Cleanup settings
+cleanup.interval.seconds        =60
